<resources>
    <string name="app_name">BarHop</string>
    <string name="viewMore">View More</string>
    <string name="redRock">Red Rock Saloon</string>
    <string name="whiskeys">Whiskey Jack\'s Saloon</string>
    <string name="chasers">Chasers</string>
    <string name="mondays">Mondays</string>
    <string name="dannys">Danny\'s Pub</string>
    <string name="mackeseys">Mackesey\'s Irish Pub</string>
    <string name="plaza">The Plaza Tavern</string>
    <string name="cask">Cask &amp; Ale</string>
    <string name="pauls">Paul\'s Club</string>
    <string name="silver">Silver Dollar Tavern</string>
    <string name="coopers">The Coopers Tavern</string>
    <string name="gennas">Genna\'s Lounge</string>
    <string name="paradise">Paradise Lounge</string>
    <string name="friends_header">Your Friends</string>
    <string name="favorites_header">Your Favorites</string>
    <string name="history_header">History</string>
    <string name="profile_header">Profile</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Signup</string>
    <string name="welcome_text">Welcome to BarHop!</string>
    <string name="welcome_text2">Please login or sign up to continue.</string>
    <string name="change_photo">Add/Change Profile Picture</string>
</resources>